Bug 1177406, don't rely on owner to be set only on main thread, r=khuey